force-app/main/default/objects/Member__c/fields/isIssued__c.field-meta.xml
<CustomField>
    <fullName>isIssued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIssued</label>
    <type>Checkbox</type>
</CustomField>