force-app/main/default/objects/Member__c/fields/MembershipDate__c.field-meta.xml
<CustomField>
    <fullName>MembershipDate__c</fullName>
    <label>MembershipDate</label>
    <type>Date</type>
</CustomField>