force-app/main/default/objects/Member__c/fields/ReNewMemberShipdate__c.field-meta.xml
<CustomField>
    <fullName>ReNewMemberShipdate__c</fullName>
    <formula>MembershipDate__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReNewMemberShipdate</label>
    <type>Date</type>
</CustomField>