force-app/main/default/objects/Member__c/validationRules/FirstName_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_rules</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( FirstName__c )  = 0</errorConditionFormula>
    <errorDisplayField>FirstName__c</errorDisplayField>
    <errorMessage>FirstName is required</errorMessage>
</ValidationRule>