force-app/main/default/objects/Member__c/validationRules/Gender_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Gender__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>Gender Required</errorMessage>
</ValidationRule>