force-app/main/default/objects/Member__c/validationRules/LastName_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>LastName_rules</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( LastName__c ) = 0</errorConditionFormula>
    <errorDisplayField>LastName__c</errorDisplayField>
    <errorMessage>LastName is required</errorMessage>
</ValidationRule>