force-app/main/default/objects/Member__c/validationRules/MembershipDate_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>MembershipDate_rules</fullName>
    <active>true</active>
    <errorConditionFormula>NOT((MembershipDate__c &gt;=  TODAY() - 3 )  &amp;&amp; (MembershipDate__c &lt;=  TODAY() + 3 ) )</errorConditionFormula>
    <errorDisplayField>MembershipDate__c</errorDisplayField>
    <errorMessage>MemberShipDate should be in 3 days past and future</errorMessage>
</ValidationRule>